More spacing issues

--- a/_scss/typography.scss
+++ b/_scss/typography.scss
@@ -13,6 +13,7 @@ h1 {
 h2 {
   font-size:1rem;
   line-height:1.5;
+  margin:0;
   font-weight:300;
   color:$light-gray;
 }
@@ -20,6 +21,7 @@ h2 {
 h3 {
   font-size:0.675rem;
   line-height:1.5;
+  margin:0;
   font-weight:300;
   letter-spacing: 0.02rem;
   color:$light-gray;
@@ -28,6 +30,7 @@ h3 {
 p {
   font-size:1rem;
   line-height:1.35;
+  margin:0;
   text-indent:0;
   font-weight:300;
   color:$light-gray;
